# bcrypto

./: .eslintrc.json  .gitignore  .npmignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  binding.gyp  build.js  eslint.config.cjs  file.txt  package-lock.json  package.json  tsconfig.json  wazm.conf.js  webpack.config.js
.circleci/: config.yml
.github/workflows/: node.js.yml
bench/: bn.js  dsa.js  ec.js  hash.js  index.js  rsa.js  svdw.js
cmake/: AppendCCompilerFlag.cmake
compat/: brorand.js  create-hash.js  create-hmac.js  hash.js  hmac-drbg.js  index.js  safe-buffer.js
compat/drbg.js/: hmac.js
etc/: build.js
lib/: aead-browser.js  aead.js  aes-browser.js  aes.js  bcrypt.js  bcrypto.js  blake160.js  blake256.js  blake2b-browser.js  blake2b.js  blake2b160.js  blake2b256.js  blake2b384.js  blake2b512.js  blake2s-browser.js  blake2s.js  blake2s128.js  blake2s160.js  blake2s224.js  blake2s256.js  bn-browser.js  bn-v8.js  bn.js  box.js  ccmp.js  chacha20-browser.js  chacha20.js  cipher-browser.js  cipher.js  cleanse-browser.js  cleanse.js  cshake.js  cshake128.js  cshake256.js  ctr-drbg.js  dh.js  digest.js  drbg.js  dsa-browser.js  dsa.js  (+95 more)
lib/encoding/: asn1.js  base16.js  base32.js  base58.js  base64.js  bech32.js  cash32-browser.js  cash32.js  index.js  lines.js  openssl.js  pem.js  pemcrypt.js  pkcs1.js  pkcs5.js  pkcs8.js  rfc2792.js  rfc3279.js  sec1.js  util.js  x509-extensions.js  x509.js
lib/internal/: asn1-mini.js  asn1.js  base64.js  bcrypt.js  ciphers.js  crypto-browser.js  crypto.js  curves.js  der.js  dhkey.js  dsa.js  dsakey.js  dsasig.js  eb2k.js  ecdsa-native.js  ecdsa.js  eckey.js  ecsig.js  eddsa.js  edkey.js  hash.js  hmac.js  key.js  keys.js  mont.js  objects.js  pem.js  pgp.js  pkcs1.js  pkcs8.js  primes.js  rfc3279.js  rsagen.js  rsakey.js  sec1.js  secp256k1-browser.js  secp256k1.js  signature.js  ssh.js  util.js  (+2 more)
lib/js/: aead.js  aes.js  base16.js  base32.js  base58.js  base64.js  batch-rng.js  bcrypt.js  bech32.js  bip-schnorr.js  blake2b.js  blake2s.js  bn.js  cash32.js  cashaddr.js  chacha20.js  cipher.js  cleanse.js  ctr-drbg.js  curves.js  dh.js  dsa.js  eb2k.js  ecdh.js  ecdsa.js  ed25519.js  ed448.js  eddsa.js  elliptic.js  hash-drbg.js  hash160.js  hash256.js  hmac-drbg.js  keccak.js  md2.js  md4.js  md5.js  md5sha1.js  murmur3.js  p384.js  (+23 more)
lib/native/: aead.js  aes.js  base16.js  base58.js  base64.js  bcrypt.js  bech32.js  binding.js  blake2b.js  blake2s.js  bn.js  cash32.js  cashaddr.js  chacha20.js  cipher.js  cleanse.js  ctr-drbg.js  dsa.js  eb2k.js  ecdh.js  ecdsa.js  ed25519.js  ed448.js  eddsa.js  gost94.js  hash-drbg.js  hash160.js  hash256.js  hkdf.js  hmac-drbg.js  keccak.js  libsecp256k1.js  md4.js  md5.js  murmur3.js  p192.js  p224.js  p256.js  pbkdf2.js  poly1305.js  (+23 more)
lib/node/: aead.js  aes.js  blake2b.js  blake2s.js  bn.js  chacha20.js  cipher.js  cleanse.js  dsa.js  ecdsa.js  ed25519.js  ed448.js  eddsa.js  hash160.js  hash256.js  keccak.js  md4.js  md5.js  murmur3.js  pbkdf2.js  poly1305.js  random.js  ripemd160.js  rsa.js  scrypt.js  secp256k1.js  sha1.js  sha224.js  sha256.js  sha3.js  sha384.js  sha512.js  siphash.js  whirlpool.js
lib/utils/: asn1.js  reader.js
lib/wasm/: binding.js  ecdsa.js  ed25519.js
scripts/: elligator.sage  elligator.txt  find-z.js  fuzz.js  import-torsion.sh  precompute.js  sageify.js
src/: aead.cc  aead.h  aes.cc  aes.h  bcrypto.c  bcrypto.cc  bcrypto.h  bech32.cc  blake2b.cc  blake2b.h  blake2s.cc  blake2s.h  bn.cc  bn.h  cash32.cc  cashaddr.cc  cashaddr.h  chacha20.cc  chacha20.h  cipher.cc  cipher.h  cipherbase.cc  cipherbase.h  common.h  compat.h  dsa.cc  dsa.h  dsa_async.cc  dsa_async.h  ecdh.cc  ecdh.h  ecdsa.cc  ecdsa.h  ed25519.cc  ed25519.h  ed448.cc  ed448.h  eddsa.cc  eddsa.h  hash.cc  (+54 more)
src/aead/: aead.c  aead.h
src/aes/: aes.c  aes.h
src/base58/: base58.c  base58.h
src/bech32/: bech32.c  bech32.h
src/blake2b/: blake2b-config.h  blake2b-impl.h  blake2b.c  blake2b.h
src/blake2s/: blake2s-impl.h  blake2s.c  blake2s.h
src/bn/: bmpz-impl.h
src/cash32/: cash32.c  cash32.h
src/cashaddr/: cashaddr.c  cashaddr.h
src/chacha20/: chacha20.c  chacha20.h
src/cipher/: cipher.c  cipher.h
src/dsa/: dsa.c  dsa.h
src/ecdsa/: ecdsa.c  ecdsa.h
src/ed25519/: curve25519-donna-32bit.h  curve25519-donna-64bit.h  curve25519-donna-helpers.h  ed25519-donna-32bit-sse2.h  ed25519-donna-64bit-sse2.h  ed25519-donna-64bit-x86-32bit.h  ed25519-donna-64bit-x86.h  ed25519-donna-batchverify.h  ed25519-donna-impl-base.h  ed25519-donna-impl-sse2.h  ed25519-donna-portable.h  ed25519-donna.h  ed25519-hash-custom.h  ed25519-hash.h  ed25519-randombytes-custom.h  ed25519-randombytes.h  ed25519.c  ed25519.h  modm-donna-32bit.h  modm-donna-64bit.h
src/ed448/: curve448.c  curve448_lcl.h  curve448_tables.c  curve448utils.h  ed448.h  eddsa.c  f_generic.c  field.h  point_448.h  scalar.c  word.h
src/extra256k1/: elligator.h
src/hash/: cipher.c  cipher.h  hash.c  hash.h
src/keccak/: keccak.c  keccak.h
src/murmur3/: murmur3.c  murmur3.h
src/nettle/: aes-decrypt-internal.c  aes-decrypt-internal.s  aes-decrypt.c  aes-encrypt-internal.c  aes-encrypt-internal.s  aes-encrypt-table.c  aes-encrypt.c  aes-invert-internal.c  aes-set-decrypt-key.c  aes-set-encrypt-key.c  aes-set-key-internal.c  aes128-meta.c  aes128-set-decrypt-key.c  aes128-set-encrypt-key.c  aes192-meta.c  aes192-set-decrypt-key.c  (+328 more)
test/: aead-test.js  aes-test.js  asn1-test.js  base16-test.js  base32-test.js  base58-test.js  base64-test.js  bcrypt-test.js  bcrypto-test.js  bech32-test.js  bip-schnorr-test.js  blake2b-test.js  bn-test.js  box-test.js  cash32-test.js  cashaddr-test.js  ccm-test.js  chacha20-test.js  chachapoly-test.js  cipher-test.js  cleanse-test.js  cshake-test.js  curve-test.js  curves-test.js  dh-test.js  drbg-test.js  dsa-test.js  dsa-wycheproof-test.js  dsaies-legacy-test.js  dsaies-test.js  eax-test.js  eb2k-test.js  ecdsa-test.js  ecdsa-wycheproof-test.js  ecies-legacy-test.js  ecies-test.js  ed25519-test.js  ed448-test.js  eddsa-test.js  elliptic-test.js  (+51 more)
utils/: has_gmp.sh  has_lib.sh
(+205 files in other folders)
